--- a/app/index.html
+++ b/app/index.html
@@ -2,47 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>React Setup</title>
-    <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <style type="text/css">
-    	.test{
-			color:blue;
-    	}
-    </style>
+    <title>BLE-Locator</title>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.2/semantic.min.css"></link>
+    <link rel="stylesheet" href="http://10.100.82.52:3207/ble/static/spinkit-bounce.css"></link>
 </head>
 <body>
-<script src="https://cdn.jsdelivr.net/remarkable/1.6.2/remarkable.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.1.0.js"></script>
 <script src="http://localhost:8080/webpack-dev-server.js"></script>
-<script type="text/javascript">
-    var global_variable = "this is global_variable";
-</script>
-    <video></video>
-    <!-- 欲插入 React Component 的位置 -->
-    <div id="div_like_button"></div>
-    <div>-----------------------</div>
-    <div><h3>React.createClass Examples</h1></div>
-    <div id="div_array"></div>
-    <div id="div_array2"></div>
-    <div id="div_list"></div>
-    <div id="div_props0"></div>
-    <div id="div_handler"></div>
-    <div id="div_input_state"></div>
-    <div><h3>ES6 React.Component Examples</h3></div>
-    <div id="div_1"></div>
-    <div id="div_2"></div>
-    <div id="div_3"></div>
-    <div id="div_props"></div>
-    <div><h3>Timer</h3></div>
-    <div id="div_state_timer"></div>
-	<div><h3>Todo List</h3></div>
-	<div id="div_todo_list"></div>
-    <div><h3>refs</h3></div>
-    <div id="div_refs"></div>
-    <div><h3>life cycle</h3></div>
-    <div id="div_life_cycle"></div>
-    <div><h3>fetch</h3></div>
-    <div id="div_fetch"></div>
-<!--<script src="bundle.js"></script>-->
+    <div id="div_main"></div>
 </body>
 </html>
